src/test/ui/interior-mutability/interior-mutability.stderr
error[E0277]: the trait bound `std::cell::UnsafeCell<{integer}>: std::panic::RefUnwindSafe` is not satisfied in `std::cell::Cell<{integer}>`
  --> $DIR/interior-mutability.rs:15:5
   |
15 |     catch_unwind(|| { x.set(23); }); //~ ERROR the trait bound
   |     ^^^^^^^^^^^^ the type std::cell::UnsafeCell<{integer}> may contain interior mutability and a reference may not be safely transferrable across a catch_unwind boundary
   |
   = help: within `std::cell::Cell<{integer}>`, the trait `std::panic::RefUnwindSafe` is not implemented for `std::cell::UnsafeCell<{integer}>`
   = note: required because it appears within the type `std::cell::Cell<{integer}>`
   = note: required because of the requirements on the impl of `std::panic::UnwindSafe` for `&std::cell::Cell<{integer}>`
   = note: required because it appears within the type `[closure@$DIR/interior-mutability.rs:15:18: 15:35 x:&std::cell::Cell<{integer}>]`
   = note: required by `std::panic::catch_unwind`

error: aborting due to previous error

